--- a/Setup/Applications/Harness Sample App/Index.yaml
+++ b/Setup/Applications/Harness Sample App/Index.yaml
@@ -1,3 +1,3 @@
 harnessApiVersion: '1.0'
 type: APPLICATION
-description: A sample To-Do List application123
+description: A sample To-Do List application
