--- a/Setup/Cloud Providers/aws.yaml
+++ b/Setup/Cloud Providers/aws.yaml
@@ -1,6 +1,6 @@
 harnessApiVersion: '1.0'
 type: AWS
-accessKey: AKIAJAADRNBVLR5E7SSA
+accessKey: AKIAJ62HOYNIDDQZ6OCA
 assumeCrossAccountRole: false
 secretKey: safeharness:otifo6ciRYyCyxOh74h_nw
 usageRestrictions:
